feat(server): configure sqlite3 with knex
- install `sqlite3` and `knex` packages
- set up knex file to configure development database
  connection
- ignore db file in `.gitignore`
- create shell script for resetting the database and add
  an npm script for this: `npm run db:reset`

--- a/server/package.json
+++ b/server/package.json
@@ -5,16 +5,20 @@
   "main": "index.js",
   "scripts": {
     "server": "nodemon server.js",
+    "db:reset": "sh ./utils/resetDatabase.sh",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.21.1",
+    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "helmet": "^4.4.1",
+    "knex": "^0.21.17",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "sqlite3": "^5.0.2"
   }
 }
